--- a/play-with-strimzi/01/1.md
+++ b/play-with-strimzi/01/1.md
@@ -37,3 +37,13 @@ kubectl get all -n kafka
 kubectl get pods -n kafka
 kubectl get svc -n kafka
 
+
+--------------------------------------------------------------------------------
+
+kubectl -n kafka run kafka-producer -ti --image=quay.io/strimzi/kafka:0.39.0-kafka-3.6.1 --rm=true --restart=Never -- bin/kafka-console-producer.sh --bootstrap-server my-kafka-cluster-kafka-bootstrap:9094 --topic my-topic
+
+
+kubectl -n kafka run kafka-consumer -ti --image=quay.io/strimzi/kafka:0.39.0-kafka-3.6.1 --rm=true --restart=Never -- bin/kafka-console-consumer.sh --bootstrap-server my-cluster-kafka-bootstrap:9092 --topic my-topic --from-beginning
+
+--------------------------------------------------------------------------------
+
